--- a/essay_1.html
+++ b/essay_1.html
@@ -13,13 +13,13 @@
     <body>
         <section class = top>
             <a href = "/"><img src = assets/images/icons/title.png></a>
+            <a href = works>works</a>
+            <a href = projects>projects</a>
+            <a href = about class = this>about</a>
+            <a href = book>book</a>
+            <a class = youtube href = https://youtu.be/aJqjSGwKxBc target = _blank><img src = assets/images/icons/youtube.svg></a>
+            <img onclick = theme(this) class = theme></i>
             <img onclick = bars(this) src = assets/images/icons/bars.png>
-			<img onclick = theme(this) class = theme></i>
-            <a href = works><img src = assets/images/icons/works.png></a>
-            <a href = projects><img src = assets/images/icons/projects.png></a>
-            <a href = about class = this><img src = assets/images/icons/about.png></a>
-            <a href = book><img src = assets/images/icons/book.png></a>
-            <a href = https://youtu.be/aJqjSGwKxBc target = _blank><img src = assets/images/icons/youtube.svg></a>
         </section>
 
         <section class = main>
@@ -30,93 +30,96 @@
 				when I was poor.
 			</i> ~ Larry Holmes
 
-			<p>
-				Nathan Ford&rsquo;s latest collection of work 
-				for the most part features close-up portraits of heads, most of these black 
-				males. They are as ever, fragmented, on the edge of dissolution. What may be 
-				termed the sensory features; ears, mouth, nose, hair, are in the main shrouded 
-				or blocked out, giving an introverted, contemplative feel to each visage. It is 
-				as if the artist is looking for something essential in the deadpan, vulnerable 
-				yet often forthright expressions on these faces. Who is in there? As Francis 
-				Bacon once persisted in painting the image of the nurse&rsquo;s screaming mouth from 
-				Eisenstein&rsquo;s Battleship Potemkin, Ford often homes in on one eye in 
-				detail- &lsquo;otherwise the world comes in and there is too much distraction&rsquo;, he 
-				reasons.
-			</p>
-			
-			<p>
-				There is a fundamental element of 
-				face-to-face communication that he is attempting to portray with this collection 
-				of heads. Two feet from another human being, rather than &lsquo;locking into&rsquo; what 
-				someone may be saying, we will often home in on or get distracted with a facial 
-				feature; a scar, a prominent nose, a gap in the teeth. What Ford often allows 
-				to shine through in these portraits is the eye, the &lsquo;traitor to the heart&rsquo;. 
-				&lsquo;Perhaps it is just shyness&rsquo;, he suggests, &lsquo;when confronted with another person, 
-				another human heart that has beaten many thousands of times, blood coursing 
-				through the veins, all I want to do is escape, disappear into the cocoon of my 
-				studio&rsquo;. It is essentially the panic of communication that he tries to put into 
-				paint. &lsquo;It is always hard to face people&rsquo;, as John McGahern put it.
-			</p>
+			<div class = essayBox>
+				<p>
+					Nathan Ford&rsquo;s latest collection of work 
+					for the most part features close-up portraits of heads, most of these black 
+					males. They are as ever, fragmented, on the edge of dissolution. What may be 
+					termed the sensory features; ears, mouth, nose, hair, are in the main shrouded 
+					or blocked out, giving an introverted, contemplative feel to each visage. It is 
+					as if the artist is looking for something essential in the deadpan, vulnerable 
+					yet often forthright expressions on these faces. Who is in there? As Francis 
+					Bacon once persisted in painting the image of the nurse&rsquo;s screaming mouth from 
+					Eisenstein&rsquo;s Battleship Potemkin, Ford often homes in on one eye in 
+					detail- &lsquo;otherwise the world comes in and there is too much distraction&rsquo;, he 
+					reasons.
+				</p>
+				
+				<p>
+					There is a fundamental element of 
+					face-to-face communication that he is attempting to portray with this collection 
+					of heads. Two feet from another human being, rather than &lsquo;locking into&rsquo; what 
+					someone may be saying, we will often home in on or get distracted with a facial 
+					feature; a scar, a prominent nose, a gap in the teeth. What Ford often allows 
+					to shine through in these portraits is the eye, the &lsquo;traitor to the heart&rsquo;. 
+					&lsquo;Perhaps it is just shyness&rsquo;, he suggests, &lsquo;when confronted with another person, 
+					another human heart that has beaten many thousands of times, blood coursing 
+					through the veins, all I want to do is escape, disappear into the cocoon of my 
+					studio&rsquo;. It is essentially the panic of communication that he tries to put into 
+					paint. &lsquo;It is always hard to face people&rsquo;, as John McGahern put it.
+				</p>
 
-			<p>
-				Whether during time travelling in Uganda, 
-				where he was often referred to as mazungu (Swahili for white man), or, as 
-				in recent years, spent living in a small former mining village in South Wales, 
-				it seems that the differentiation as a black man (as opposed to, say, an artist) 
-				is one that he is forced to return to, even if thinking of his identity 
-				predominantly in that way is something the painter himself left behind with 
-				adolescence. &lsquo;Part of me is sick of being foreign&rsquo;, he says.
-			</p>
+				<p>
+					Whether during time travelling in Uganda, 
+					where he was often referred to as mazungu (Swahili for white man), or, as 
+					in recent years, spent living in a small former mining village in South Wales, 
+					it seems that the differentiation as a black man (as opposed to, say, an artist) 
+					is one that he is forced to return to, even if thinking of his identity 
+					predominantly in that way is something the painter himself left behind with 
+					adolescence. &lsquo;Part of me is sick of being foreign&rsquo;, he says.
+				</p>
 
-			<p>
-				For the series of 
-				12 head paintings (Black Male 1 to 12) Ford, again as Bacon was 
-				wont to do, uses the reverse of pre-primed canvasses, preferring the textured, 
-				organic ground that seems to blend with the emerging faces so well. Whether 
-				they are knowing or innocent, all these faces seem shorn of self-consciousness, 
-				attention sometimes averted. At other times the viewer is faced starkly, with a 
-				frankness which brings to mind the last of Rembrandt&rsquo;s self-portraits (1669). 
-				Though all the faces are black there is a diversity of ethnicity, and clear 
-				variations in skin colour. Ford has in the last couple of years adjusted the mix 
-				of pigments he uses and enjoys the challenge of the subtle tonal variation of 
-				the colour black itself. However it is also noteworthy (perhaps not entirely 
-				without mischief) that these portraits, unlike previous, smaller series of 
-				heads, but in common with many paintings in the not so distant past, are given a 
-				title which makes reference to a generic racial distinction rather than a first name.
-			</p>
+				<p>
+					For the series of 
+					12 head paintings (Black Male 1 to 12) Ford, again as Bacon was 
+					wont to do, uses the reverse of pre-primed canvasses, preferring the textured, 
+					organic ground that seems to blend with the emerging faces so well. Whether 
+					they are knowing or innocent, all these faces seem shorn of self-consciousness, 
+					attention sometimes averted. At other times the viewer is faced starkly, with a 
+					frankness which brings to mind the last of Rembrandt&rsquo;s self-portraits (1669). 
+					Though all the faces are black there is a diversity of ethnicity, and clear 
+					variations in skin colour. Ford has in the last couple of years adjusted the mix 
+					of pigments he uses and enjoys the challenge of the subtle tonal variation of 
+					the colour black itself. However it is also noteworthy (perhaps not entirely 
+					without mischief) that these portraits, unlike previous, smaller series of 
+					heads, but in common with many paintings in the not so distant past, are given a 
+					title which makes reference to a generic racial distinction rather than a first name.
+				</p>
 
-			<p>
-				Familiar also are the pencil lines on the 
-				portraits, reminiscent of Giacometti&rsquo;s &lsquo;scribbled&rsquo; portraits. This comparison is 
-				further accentuated in the drawings in the exhibition itself. Familiar too are 
-				the lonely protagonists on the margins of fragmented cityscapes, a modern 
-				melange which feels on the edge of chaos. The sense of panic is stronger in 
-				Carbon Lung than Usera, both of which have their genesis in Madrid. The latter 
-				has a softer feel, as if the day is warming up, a morning painting perhaps. In 
-				Souk the claustrophobia, the quiet whisper of a threatening world is very much 
-				there, as a child (recognisably the artist&rsquo;s son) looks around fretfully towards 
-				a cloaked figure in the background.
-			</p>
+				<p>
+					Familiar also are the pencil lines on the 
+					portraits, reminiscent of Giacometti&rsquo;s &lsquo;scribbled&rsquo; portraits. This comparison is 
+					further accentuated in the drawings in the exhibition itself. Familiar too are 
+					the lonely protagonists on the margins of fragmented cityscapes, a modern 
+					melange which feels on the edge of chaos. The sense of panic is stronger in 
+					Carbon Lung than Usera, both of which have their genesis in Madrid. The latter 
+					has a softer feel, as if the day is warming up, a morning painting perhaps. In 
+					Souk the claustrophobia, the quiet whisper of a threatening world is very much 
+					there, as a child (recognisably the artist&rsquo;s son) looks around fretfully towards 
+					a cloaked figure in the background.
+				</p>
 
-			<p>
-				It is noticeable in Souk that the 
-				foreground figures have the space to be dwarfed, to be hemmed in by the market 
-				trailing off behind them and the balconies and overhangs above. Ford seems in 
-				possession of a confidence which belies his youth, and certainly paints with a 
-				brighter palette now. This confidence is also evidenced in the Black Male 
-				series, paintings with a marked and arresting individuality in paint if not in 
-				name. The canvas is still obviously the battleground for this young artist, it 
-				is where he pits his wits against the reality that he sees around him and for 
-				the moment at least it would seem from this collection of work, it is a battle 
-				that he is excelling in. As a painter I think Ford would go along with Bacon.
-				&lsquo;You could say that I have no inspiration, that I only need to paint.&rsquo;
-			</p>
+				<p>
+					It is noticeable in Souk that the 
+					foreground figures have the space to be dwarfed, to be hemmed in by the market 
+					trailing off behind them and the balconies and overhangs above. Ford seems in 
+					possession of a confidence which belies his youth, and certainly paints with a 
+					brighter palette now. This confidence is also evidenced in the Black Male 
+					series, paintings with a marked and arresting individuality in paint if not in 
+					name. The canvas is still obviously the battleground for this young artist, it 
+					is where he pits his wits against the reality that he sees around him and for 
+					the moment at least it would seem from this collection of work, it is a battle 
+					that he is excelling in. As a painter I think Ford would go along with Bacon.
+					&lsquo;You could say that I have no inspiration, that I only need to paint.&rsquo;
+				</p>
 
-			<p>Aidan Quinn 2009</p>
+				<p>Aidan Quinn 2009</p>
+			</div>
 
 			<footer>
                 <a href = mailto:info@nathanford.co.uk>info@nathanford.co.uk</a>
-                &copy; Copyright Nathan Ford, <span year></span>. Website by <a href = https://greyhope.uk target = _blank>Reuben Ford</a>.
+                <span>&copy; Copyright Nathan Ford, <span year></span>.</span>
+                <span>Website by Reuben and  <a href = https://joachimford.uk target = _blank>Joachim Ford</a>.</span>
             </footer>
 		</section>
 	</body>
