--- a/essay_2.html
+++ b/essay_2.html
@@ -13,13 +13,13 @@
     <body>
         <section class = top>
             <a href = "/"><img src = assets/images/icons/title.png></a>
+            <a href = works>works</a>
+            <a href = projects>projects</a>
+            <a href = about class = this>about</a>
+            <a href = book>book</a>
+            <a class = youtube href = https://youtu.be/aJqjSGwKxBc target = _blank><img src = assets/images/icons/youtube.svg></a>
+            <img onclick = theme(this) class = theme></i>
             <img onclick = bars(this) src = assets/images/icons/bars.png>
-			<img onclick = theme(this) class = theme></i>
-            <a href = works><img src = assets/images/icons/works.png></a>
-            <a href = projects><img src = assets/images/icons/projects.png></a>
-            <a href = about class = this><img src = assets/images/icons/about.png></a>
-            <a href = book><img src = assets/images/icons/book.png></a>
-            <a href = https://youtu.be/aJqjSGwKxBc target = _blank><img src = assets/images/icons/youtube.svg></a>
         </section>
 
         <section class = main>
@@ -29,95 +29,97 @@
 				If you dig deep enough, all of our dreams are the same.
 			</i> ~ Amos Oz
 
-			<p>
-				The figure in Nathan Ford's portrait of Mwaana (the Lugandan word for child) 
-				looks penetratingly out and into the viewer. It is at once an 
-				uncompromising and haunting expression largely, as is Ford's wont, 
-				with one eye the emotional epicentre, framed by facial and background 
-				detail in various stages of fragmentation and dissolution. It is a 
-				painting that inspires silence. Mystery lurks there too, an ambiguity 
-				in the harsh yet soft, knowing yet lost expression on the boy's face. 
-				He is in fact an orphan, his parents victims of the Lord's Resistance 
-				Army in northern Uganda, a country that Ford is familiar with having 
-				travelled in central Africa over a decade ago. It is a painting not 
-				without risk (there can be prurience in our presumption of victimhood) 
-				especially given that the subject matter is a child. 'All memory', 
-				said the poet Richard Hugo, 'resolves itself in gaze'. This
-				gaze, of bewilderment, determination, resignation, embodies within it 
-				something that we recognise.
-			</p>
-			
-			<p>
-				There is an emotional strength 
-				reminiscent of the later portraits of Rembrandt, or the tortured 
-				visages of Egon Schiele. Most of all however it perhaps calls to mind 
-				a more modern and iconic imagery - Steve Curry's famous photo of 'The 
-				Afghan Girl', or even Don Mc Cullin's shell-shocked soldier. We feel 
-				somehow that we bring to the painting some knowledge of the context of 
-				this single human being's life. What we seem to recognise, or face, 
-				in Mwaana is actually, to paraphrase a line of Seamus Heaney (from The 
-				Human Chain), 'Me in the face and the face in me'.
-			</p>
-			
-			<p>  
-				Mwaana's is 
-				a face made to be painted by Ford, it deserves the scrutiny of being 
-				writ large. It is a comment on how we look as much as what we are 
-				looking at; drawing us to the fulcrum of the eye, and as ever 
-				balancing figuration and abstraction in such a way that what is left 
-				in the painting is as important as what has been omitted. There is no 
-				ostentation and no redundancy.
-			</p>
+			<div class = essayBox>
+				<p>
+					The figure in Nathan Ford's portrait of Mwaana (the Lugandan word for child) 
+					looks penetratingly out and into the viewer. It is at once an 
+					uncompromising and haunting expression largely, as is Ford's wont, 
+					with one eye the emotional epicentre, framed by facial and background 
+					detail in various stages of fragmentation and dissolution. It is a 
+					painting that inspires silence. Mystery lurks there too, an ambiguity 
+					in the harsh yet soft, knowing yet lost expression on the boy's face. 
+					He is in fact an orphan, his parents victims of the Lord's Resistance 
+					Army in northern Uganda, a country that Ford is familiar with having 
+					travelled in central Africa over a decade ago. It is a painting not 
+					without risk (there can be prurience in our presumption of victimhood) 
+					especially given that the subject matter is a child. 'All memory', 
+					said the poet Richard Hugo, 'resolves itself in gaze'. This
+					gaze, of bewilderment, determination, resignation, embodies within it 
+					something that we recognise.
+				</p>
+				
+				<p>
+					There is an emotional strength 
+					reminiscent of the later portraits of Rembrandt, or the tortured 
+					visages of Egon Schiele. Most of all however it perhaps calls to mind 
+					a more modern and iconic imagery - Steve Curry's famous photo of 'The 
+					Afghan Girl', or even Don Mc Cullin's shell-shocked soldier. We feel 
+					somehow that we bring to the painting some knowledge of the context of 
+					this single human being's life. What we seem to recognise, or face, 
+					in Mwaana is actually, to paraphrase a line of Seamus Heaney (from The 
+					Human Chain), 'Me in the face and the face in me'.
+				</p>
+				
+				<p>  
+					Mwaana's is 
+					a face made to be painted by Ford, it deserves the scrutiny of being 
+					writ large. It is a comment on how we look as much as what we are 
+					looking at; drawing us to the fulcrum of the eye, and as ever 
+					balancing figuration and abstraction in such a way that what is left 
+					in the painting is as important as what has been omitted. There is no 
+					ostentation and no redundancy.
+				</p>
 
-			<p>
-				The issue of how we look, how we see in 
-				any transient instant, seems to preoccupy Nathan Ford. Take his urban 
-				landscapes such as 'Last One Home' and 'The Race'. He picks up on the 
-				fleeting passage of visual details we may be aware of in a trice as we 
-				take in a busy street scene - the reflector light on a bicycle 
-				mudguard, the strip of colour on the side of a bus or shop signage, a 
-				just opened umbrella, reflections from windows in the street.
-				In spite of the careering presence of the buses and vans, the towering buildings, 
-				the hulking Victorian steel architecture - played out amid the lit 
-				canyon-like light of modern urban life - all this too, he seems to 
-				say, is periphery. It will pass.
-			</p>
+				<p>
+					The issue of how we look, how we see in 
+					any transient instant, seems to preoccupy Nathan Ford. Take his urban 
+					landscapes such as 'Last One Home' and 'The Race'. He picks up on the 
+					fleeting passage of visual details we may be aware of in a trice as we 
+					take in a busy street scene - the reflector light on a bicycle 
+					mudguard, the strip of colour on the side of a bus or shop signage, a 
+					just opened umbrella, reflections from windows in the street.
+					In spite of the careering presence of the buses and vans, the towering buildings, 
+					the hulking Victorian steel architecture - played out amid the lit 
+					canyon-like light of modern urban life - all this too, he seems to 
+					say, is periphery. It will pass.
+				</p>
 
-			<p>     
-				The transitory nature of the scenes 
-				depicted also carry a sense of foreboding - a white van lurks 
-				menacingly in 'Last One Home' and in 'Limited Service', paintings that 
-				could also be a vignette from a parent's bad dream (familiar child in 
-				familiar but incongruous setting). These landscapes relate to the 
-				precariousness of raising a young family, and judging by the portrait 
-				of Reuben, Ford's eldest son, the father is not the only worrier in 
-				the household. The apple has not fallen far from the tree.
-			</p>
+				<p>     
+					The transitory nature of the scenes 
+					depicted also carry a sense of foreboding - a white van lurks 
+					menacingly in 'Last One Home' and in 'Limited Service', paintings that 
+					could also be a vignette from a parent's bad dream (familiar child in 
+					familiar but incongruous setting). These landscapes relate to the 
+					precariousness of raising a young family, and judging by the portrait 
+					of Reuben, Ford's eldest son, the father is not the only worrier in 
+					the household. The apple has not fallen far from the tree.
+				</p>
 
-			<p>
-				Ford has 
-				recently completed long-term major renovations to his home, having 
-				settled in a rural location far from the South London of his youth, or 
-				his days as a scholarship student at the Byam Shaw school of art. 
-				Besides the portraits of both his sons, 'La Familia' especially is a 
-				painting that reflects this new period in his life, working from a 
-				studio annexe at home in close proximity to his family, far from what 
-				Thomas Mann called 'the guileless unrealism of youth'. There is a 
-				strength, a fizz of excitement and energy in his work that has been 
-				enhanced by his new-found responsibilities. Indeed Flaubert's 
-				oft-quoted adage is now even more apposite to Nathan Ford's painting 
-				than ever before. 'Be regular and orderly in your life like a 
-				bourgeois, so that you may be violent and original in your work.' This 
-				set of paintings represents Nathan Ford's most pioneering body of work 
-				to date.
-			</p>
+				<p>
+					Ford has 
+					recently completed long-term major renovations to his home, having 
+					settled in a rural location far from the South London of his youth, or 
+					his days as a scholarship student at the Byam Shaw school of art. 
+					Besides the portraits of both his sons, 'La Familia' especially is a 
+					painting that reflects this new period in his life, working from a 
+					studio annexe at home in close proximity to his family, far from what 
+					Thomas Mann called 'the guileless unrealism of youth'. There is a 
+					strength, a fizz of excitement and energy in his work that has been 
+					enhanced by his new-found responsibilities. Indeed Flaubert's 
+					oft-quoted adage is now even more apposite to Nathan Ford's painting 
+					than ever before. 'Be regular and orderly in your life like a 
+					bourgeois, so that you may be violent and original in your work.' This 
+					set of paintings represents Nathan Ford's most pioneering body of work 
+					to date.
+				</p>
 
-			<p>Aidan Quinn 2011</p>
+				<p>Aidan Quinn 2011</p>
+			</div>
 
 			<footer>
                 <a href = mailto:info@nathanford.co.uk>info@nathanford.co.uk</a>
-                &copy; Copyright Nathan Ford, <span year></span>. Website by <a href = https://greyhope.uk target = _blank>Reuben Ford</a>.
-            </footer>
+                <span>&copy; Copyright Nathan Ford, <span year></span>.</span>
+                <span>Website by Reuben and  <a href = https://joachimford.uk target = _blank>Joachim Ford</a>.</span>            </footer>
 		</section>
 	</body>
 </html>
