--- a/essay_3.html
+++ b/essay_3.html
@@ -13,13 +13,13 @@
     <body>
         <section class = top>
             <a href = "/"><img src = assets/images/icons/title.png></a>
+            <a href = works>works</a>
+            <a href = projects>projects</a>
+            <a href = about class = this>about</a>
+            <a href = book>book</a>
+            <a class = youtube href = https://youtu.be/aJqjSGwKxBc target = _blank><img src = assets/images/icons/youtube.svg></a>
+            <img onclick = theme(this) class = theme></i>
             <img onclick = bars(this) src = assets/images/icons/bars.png>
-			<img onclick = theme(this) class = theme></i>
-            <a href = works><img src = assets/images/icons/works.png></a>
-            <a href = projects><img src = assets/images/icons/projects.png></a>
-            <a href = about class = this><img src = assets/images/icons/about.png></a>
-            <a href = book><img src = assets/images/icons/book.png></a>
-            <a href = https://youtu.be/aJqjSGwKxBc target = _blank><img src = assets/images/icons/youtube.svg></a>
         </section>
 
         <section class = main>
@@ -29,109 +29,112 @@
 				My child could do that.
 			</i> ~ [anonymous]
 
-			<p>
-				The notions of family and home lie at 
-				the heart of the latest collection of paintings by Nathan Ford. The work 
-				can broadly be divided into 2 categories. Large sweeping street scenes, 
-				barren on the margins,set the scene for off-centre hives of activity, 
-				their bright flashings resembling the collisions of far-flung nebulae. In 
-				the absence of medium-sized works, all the remaining paintings are 
-				small, and amongst these are portraits of 3 generations of Ford's 
-				immediate family. In addition is a series of still lives, which include 
-				vessels unearthed from the formerly abandoned garden behind the artist's 
-				home. With a growing maturity in work and in life (though still a measly 
-				36 years of age) and with the support throughout of wife Anna and his 
-				parents in encouraging his career as an artist, Ford has developed 
-				confidence as a painter, without ever falling into any kind of comfort 
-				zone. He now more than ever has the practical tools necessary (and has 
-				earned the right to give himself time) to experiment with new ideas and 
-				work them through fastidiously towards what many viewers would consider 
-				an impressive resolution, though the artist himself remains his own 
-				harshest critic.
-			</p>
+			<div class = essayBox>
+				<p>
+					The notions of family and home lie at 
+					the heart of the latest collection of paintings by Nathan Ford. The work 
+					can broadly be divided into 2 categories. Large sweeping street scenes, 
+					barren on the margins,set the scene for off-centre hives of activity, 
+					their bright flashings resembling the collisions of far-flung nebulae. In 
+					the absence of medium-sized works, all the remaining paintings are 
+					small, and amongst these are portraits of 3 generations of Ford's 
+					immediate family. In addition is a series of still lives, which include 
+					vessels unearthed from the formerly abandoned garden behind the artist's 
+					home. With a growing maturity in work and in life (though still a measly 
+					36 years of age) and with the support throughout of wife Anna and his 
+					parents in encouraging his career as an artist, Ford has developed 
+					confidence as a painter, without ever falling into any kind of comfort 
+					zone. He now more than ever has the practical tools necessary (and has 
+					earned the right to give himself time) to experiment with new ideas and 
+					work them through fastidiously towards what many viewers would consider 
+					an impressive resolution, though the artist himself remains his own 
+					harshest critic.
+				</p>
 
-			<p>
-				The experience of successful shows 
-				has not dampened his curiosity, far from it. Echoing Picasso's 
-				description of art as the elimination of the unnecessary he is paring 
-				the work down more than ever, every stage of the mark-making process 
-				recorded on the canvas, including the preliminary measurements. Ford has 
-				the uncanny ability to draw us toward the main detail, not just through 
-				his penetrating observation of streets or faces, but in the very act of 
-				looking itself. Momentary vignettes are cut and pasted, reconstructed, 
-				the solitary figures (so often now clearly his own children) 
-				choreographed in coruscating streetscapes through which they move, as if 
-				under theatre lights. The threadbare landscapes are a London we know in 
-				our very marrow. Much of my time he posits, is spent on the spaces 
-				that are meant to be ignored. In a way I am trying to make a subtle 
-				backdrop, where I can plot a visual-neural pathway. This is of course 
-				easier said than done, as the line between what is noise and what is 
-				signal is not distinct. Indeed. It is in the interface of noise-signal, 
-				figuration-abstraction, movement-stillness, where the fizzing tension of 
-				the work finds its harmony.
-			</p>
+				<p>
+					The experience of successful shows 
+					has not dampened his curiosity, far from it. Echoing Picasso's 
+					description of art as the elimination of the unnecessary he is paring 
+					the work down more than ever, every stage of the mark-making process 
+					recorded on the canvas, including the preliminary measurements. Ford has 
+					the uncanny ability to draw us toward the main detail, not just through 
+					his penetrating observation of streets or faces, but in the very act of 
+					looking itself. Momentary vignettes are cut and pasted, reconstructed, 
+					the solitary figures (so often now clearly his own children) 
+					choreographed in coruscating streetscapes through which they move, as if 
+					under theatre lights. The threadbare landscapes are a London we know in 
+					our very marrow. Much of my time he posits, is spent on the spaces 
+					that are meant to be ignored. In a way I am trying to make a subtle 
+					backdrop, where I can plot a visual-neural pathway. This is of course 
+					easier said than done, as the line between what is noise and what is 
+					signal is not distinct. Indeed. It is in the interface of noise-signal, 
+					figuration-abstraction, movement-stillness, where the fizzing tension of 
+					the work finds its harmony.
+				</p>
 
-			<p>
-				Ford's streets should be teeming with people, though only one (Butterfly 
-				Affectation) appears significantly populated. In The North Woods (the 
-				name of the area comes from a wood that once stood there), the child is 
-				alone at a traffic junction, the lights, signals and sounds flashing and 
-				winking in the inky blue of evening. The stance and the favourite 
-				bumble-bee hat identifies his younger son, standing in a street Ford the 
-				elder knew like the back of his hand. The child looks dwarfed and 
-				vulnerable, though with Stan Ford's garage at the end of the street 
-				behind him, I suspect this is a vicarious self-portrait, a paean to 
-				vulnerability both in the child but more so in the parent, revivified as 
-				when observing our children, as we ruminate on how we can best look 
-				after them and keep them safe. In other paintings the children have 
-				their backs to us- in The Triangle (depicting a street in Crystal 
-				Palace) the vivid signs tell us it is a one-way street (pointing away 
-				from us). In South Circular the little boy ambles pensively, perhaps 
-				avoiding the pavement cracks, while the traffic flashes past toward a 
-				distant constellation of street lights.
-			</p>
+				<p>
+					Ford's streets should be teeming with people, though only one (Butterfly 
+					Affectation) appears significantly populated. In The North Woods (the 
+					name of the area comes from a wood that once stood there), the child is 
+					alone at a traffic junction, the lights, signals and sounds flashing and 
+					winking in the inky blue of evening. The stance and the favourite 
+					bumble-bee hat identifies his younger son, standing in a street Ford the 
+					elder knew like the back of his hand. The child looks dwarfed and 
+					vulnerable, though with Stan Ford's garage at the end of the street 
+					behind him, I suspect this is a vicarious self-portrait, a paean to 
+					vulnerability both in the child but more so in the parent, revivified as 
+					when observing our children, as we ruminate on how we can best look 
+					after them and keep them safe. In other paintings the children have 
+					their backs to us- in The Triangle (depicting a street in Crystal 
+					Palace) the vivid signs tell us it is a one-way street (pointing away 
+					from us). In South Circular the little boy ambles pensively, perhaps 
+					avoiding the pavement cracks, while the traffic flashes past toward a 
+					distant constellation of street lights.
+				</p>
 
-			<p>
-				The Boundary Wall paintings incorporate perhaps the most interesting 
-				feature of the bigger paintings - the use of the drawings of Ford's two 
-				children, Reuben aged 6 and Joachim 4. Artists too numerous to name have 
-				attempted to capture the unfettered innocence of the child. More 
-				numerous perhaps (and the writer is a signed up member) are parents who 
-				stare in star-struck awe at their children's drawings. Just as the 
-				street scenes seem to freeze a fragment of time and deal with the how 
-				of looking, the paintings which include children's drawings are a 
-				celebration of the developing mechanics of visual intelligence, as 
-				Michael Ayrton put it. So here we have, in part, Ford as set-designer 
-				and choreographer, his sons the draughtsmen. The children themselves are 
-				the subjects of several of the small portraits, soliloquies on the 
-				different moods and character traits that are the essence of each. More 
-				unflinching are the portraits of the adults. 'Anna' and 'Mum' 
-				particularly seem to be meditations on the harsh effects of time and 
-				responsibility, though the artist himself in typical fashion saves the 
-				most severe treatment for himself, perhaps in anticipation of the 
-				exposure of another body of work to the world. These adult portraits are 
-				moving, melancholically difficult yet irresistible, compelling one to 
-				wheel around and reconsider.
-			</p>
+				<p>
+					The Boundary Wall paintings incorporate perhaps the most interesting 
+					feature of the bigger paintings - the use of the drawings of Ford's two 
+					children, Reuben aged 6 and Joachim 4. Artists too numerous to name have 
+					attempted to capture the unfettered innocence of the child. More 
+					numerous perhaps (and the writer is a signed up member) are parents who 
+					stare in star-struck awe at their children's drawings. Just as the 
+					street scenes seem to freeze a fragment of time and deal with the how 
+					of looking, the paintings which include children's drawings are a 
+					celebration of the developing mechanics of visual intelligence, as 
+					Michael Ayrton put it. So here we have, in part, Ford as set-designer 
+					and choreographer, his sons the draughtsmen. The children themselves are 
+					the subjects of several of the small portraits, soliloquies on the 
+					different moods and character traits that are the essence of each. More 
+					unflinching are the portraits of the adults. 'Anna' and 'Mum' 
+					particularly seem to be meditations on the harsh effects of time and 
+					responsibility, though the artist himself in typical fashion saves the 
+					most severe treatment for himself, perhaps in anticipation of the 
+					exposure of another body of work to the world. These adult portraits are 
+					moving, melancholically difficult yet irresistible, compelling one to 
+					wheel around and reconsider.
+				</p>
 
-			<p>
-				Ford has again produced an innovative, indefatigable collection of work. 
-				The small works distil something much more than likeness, and preserve 
-				this quiddity in unforgettable gem-like portraits. The larger paintings 
-				manage to go one step further than simply attempting to recreate the 
-				naive or the child-like. They endeavour to preserve the artist's sense 
-				of fascination and wonderment at his children's unbridled, unforeseeable 
-				directness, not to mention the education he has inadvertently received 
-				at their hands. They nail their ideas on a blank page, in a brief 
-				flurry, with phlegmatic ease. Every child is an artist said Picasso, 
-				the problem is how to remain an artist once he grows up.
-			</p>
+				<p>
+					Ford has again produced an innovative, indefatigable collection of work. 
+					The small works distil something much more than likeness, and preserve 
+					this quiddity in unforgettable gem-like portraits. The larger paintings 
+					manage to go one step further than simply attempting to recreate the 
+					naive or the child-like. They endeavour to preserve the artist's sense 
+					of fascination and wonderment at his children's unbridled, unforeseeable 
+					directness, not to mention the education he has inadvertently received 
+					at their hands. They nail their ideas on a blank page, in a brief 
+					flurry, with phlegmatic ease. Every child is an artist said Picasso, 
+					the problem is how to remain an artist once he grows up.
+				</p>
 
-			<p>Aidan Quinn 2013</p>
+				<p>Aidan Quinn 2013</p>
+			</div>
 		
 			<footer>
                 <a href = mailto:info@nathanford.co.uk>info@nathanford.co.uk</a>
-                &copy; Copyright Nathan Ford, <span year></span>. Website by <a href = https://greyhope.uk target = _blank>Reuben Ford</a>.
+                <span>&copy; Copyright Nathan Ford, <span year></span>.</span>
+                <span>Website by Reuben and  <a href = https://joachimford.uk target = _blank>Joachim Ford</a>.</span>
             </footer>
 		</section>
 	</body>
