--- a/essay_6.html
+++ b/essay_6.html
@@ -13,13 +13,13 @@
     <body>
         <section class = top>
             <a href = "/"><img src = assets/images/icons/title.png></a>
+            <a href = works>works</a>
+            <a href = projects>projects</a>
+            <a href = about class = this>about</a>
+            <a href = book>book</a>
+            <a class = youtube href = https://youtu.be/aJqjSGwKxBc target = _blank><img src = assets/images/icons/youtube.svg></a>
+            <img onclick = theme(this) class = theme>
             <img onclick = bars(this) src = assets/images/icons/bars.png>
-			<img onclick = theme(this) class = theme></i>
-            <a href = works><img src = assets/images/icons/works.png></a>
-            <a href = projects><img src = assets/images/icons/projects.png></a>
-            <a href = about class = this><img src = assets/images/icons/about.png></a>
-            <a href = book><img src = assets/images/icons/book.png></a>
-            <a href = https://youtu.be/aJqjSGwKxBc target = _blank><img src = assets/images/icons/youtube.svg></a>
         </section>
 
         <section class = main>
@@ -30,74 +30,77 @@
 				get old.
 			</i> ~ Franz Kafka
 
-			<p>
-				Nathan Ford&rsquo;s paintings are an essential part of his communication with the outside world.
-				He marks the passing of time with portraits of his children, family and friends, all faces he knows beyond mere flesh.
-				His larger works, mainly urban landscapes, are an exploration of fleeting sensations of light, form and colour.
-				Still-lifes, with flowers on the point of dying, are in one sense momento mori, though Nathan bridles at such a direct allusion.  &lsquo;They are about remembering and forgetting.
-				Even the process of painting them is helpful, despite the emotion being raw. But I wonder if I am telling myself stories. How can I know the truth of why exactly I am doing these paintings?&rsquo;
-			</p>
+			<div class = essayBox>
+				<p>
+					Nathan Ford&rsquo;s paintings are an essential part of his communication with the outside world.
+					He marks the passing of time with portraits of his children, family and friends, all faces he knows beyond mere flesh.
+					His larger works, mainly urban landscapes, are an exploration of fleeting sensations of light, form and colour.
+					Still-lifes, with flowers on the point of dying, are in one sense momento mori, though Nathan bridles at such a direct allusion.  &lsquo;They are about remembering and forgetting.
+					Even the process of painting them is helpful, despite the emotion being raw. But I wonder if I am telling myself stories. How can I know the truth of why exactly I am doing these paintings?&rsquo;
+				</p>
 
-			<p>
-				This musing is appropriately Kafkaesque. He points to the initial inspiration for the figure in <i>Platform</i> as the main character in <i>The Trial</i>.
-				We find our Jozef K looking suitably forlorn, legs splayed redundantly as he waits on a bench at Baker Street, dwarfed by the long cascading emptiness of the underground station.
-			</p>
+				<p>
+					This musing is appropriately Kafkaesque. He points to the initial inspiration for the figure in <i>Platform</i> as the main character in <i>The Trial</i>.
+					We find our Jozef K looking suitably forlorn, legs splayed redundantly as he waits on a bench at Baker Street, dwarfed by the long cascading emptiness of the underground station.
+				</p>
 
-			<p>
-				Playfulness too is a vital feature in Nathan&rsquo;s work, and the artist enthuses about the influence of his sons Reuben (12) and Joachim (10).
-				Their drawings are prominent in <i>Vicenza</i> (cover image), among other works, and there is an unbridled inventiveness and joy in their own GreyHope paintings.
-				A shared sense of humour and experience (see <i>Smoking Fags at the Exit</i>) are products of a strong family bond and a high mutual regard for creative endeavour and self-reliance.
-				Indeed over the two decades I have known Nathan I have appreciated his quiet, determined single-mindedness.
-				From choosing, cutting and finishing the wood for his frames, to the merest mark-making on the largest painting, Nathan approaches all aspects of his work, practical and artistic, with careful deliberation and focus.
-				He has also found a rhythm in the sequence of processes involved in preparing for a biennial exhibition.
-			</p>
+				<p>
+					Playfulness too is a vital feature in Nathan&rsquo;s work, and the artist enthuses about the influence of his sons Reuben (12) and Joachim (10).
+					Their drawings are prominent in <i>Vicenza</i> (cover image), among other works, and there is an unbridled inventiveness and joy in their own GreyHope paintings.
+					A shared sense of humour and experience (see <i>Smoking Fags at the Exit</i>) are products of a strong family bond and a high mutual regard for creative endeavour and self-reliance.
+					Indeed over the two decades I have known Nathan I have appreciated his quiet, determined single-mindedness.
+					From choosing, cutting and finishing the wood for his frames, to the merest mark-making on the largest painting, Nathan approaches all aspects of his work, practical and artistic, with careful deliberation and focus.
+					He has also found a rhythm in the sequence of processes involved in preparing for a biennial exhibition.
+				</p>
 
-			<p>
-				The appearance of his late father Stan highlights the emotional import of the larger works, something that may be more obvious in the portraits, where the concentration on one of the subject&rsquo;s eyes intensifies the &lsquo;eye-contact&rsquo;, or in the preoccupation with mortality in the still-lifes.
-				Once attracted to look at his urban works one discovers that they have a compelling depth, due in no small part to the detailed architecture, carefully rendered though scarcely noticeable at first.
-			<p>
+				<p>
+					The appearance of his late father Stan highlights the emotional import of the larger works, something that may be more obvious in the portraits, where the concentration on one of the subject&rsquo;s eyes intensifies the &lsquo;eye-contact&rsquo;, or in the preoccupation with mortality in the still-lifes.
+					Once attracted to look at his urban works one discovers that they have a compelling depth, due in no small part to the detailed architecture, carefully rendered though scarcely noticeable at first.
+				<p>
 
-			<p>
-				When describing why one of the larger landscapes grates, Nathan repeatedly remarks &lsquo;It doesn&rsquo;t work, I can&rsquo;t <i>inhabit</i> it&rsquo;.
-				I imagine the artist standing before one of these paintings, the work sloping down in a curve towards his feet in the manner of a skateboard ramp, enlivening the sensation of stepping into the scene. 
-				Only within a solid and subtle composition is he unconfined and free to take us on a visual adventure, to enjoy the highlighted areas of emphasis, or to follow a light trail into darker recesses and the smells and fluid buzz of a city thoroughfare.
-			</p>
+				<p>
+					When describing why one of the larger landscapes grates, Nathan repeatedly remarks &lsquo;It doesn&rsquo;t work, I can&rsquo;t <i>inhabit</i> it&rsquo;.
+					I imagine the artist standing before one of these paintings, the work sloping down in a curve towards his feet in the manner of a skateboard ramp, enlivening the sensation of stepping into the scene. 
+					Only within a solid and subtle composition is he unconfined and free to take us on a visual adventure, to enjoy the highlighted areas of emphasis, or to follow a light trail into darker recesses and the smells and fluid buzz of a city thoroughfare.
+				</p>
 
-			<p>
-				Though family is a thread woven deep into the work, the paintings are not historical or sentimental.
-				There are streets we may feel we recognise, and actual locations in south east London, some of them framed within painted black lines which give them the feel of looking at old negatives.
-				We see Crystal Palace and Herne Hill, or the Brighton sea-front.  Ford attests however that &lsquo;the place itself, where it is, is not important.  It&rsquo;s just a stage set.&rsquo;
-				Sunny inside, spotted in West Norwood on a visit to see Stan in hospital, has the appearance of a choreographed arrangement of scaffolding. It is a wonderful balance of muted colour, immersive rather than dramatic.
-				A non-descript understated scene that one can lose oneself in.  Nathan has this brand of finely-tuned subtlety in his gift and it gives the work its heft, its longevity.
-			</p>
+				<p>
+					Though family is a thread woven deep into the work, the paintings are not historical or sentimental.
+					There are streets we may feel we recognise, and actual locations in south east London, some of them framed within painted black lines which give them the feel of looking at old negatives.
+					We see Crystal Palace and Herne Hill, or the Brighton sea-front.  Ford attests however that &lsquo;the place itself, where it is, is not important.  It&rsquo;s just a stage set.&rsquo;
+					Sunny inside, spotted in West Norwood on a visit to see Stan in hospital, has the appearance of a choreographed arrangement of scaffolding. It is a wonderful balance of muted colour, immersive rather than dramatic.
+					A non-descript understated scene that one can lose oneself in.  Nathan has this brand of finely-tuned subtlety in his gift and it gives the work its heft, its longevity.
+				</p>
 
-			<p>
-				He is compelled to record a moment in time with its catalyst a visual sensation – an emotion that he wants to convey and make seen. Such a thing of beauty is described in Seamus Heaney&rsquo;s  Postcript :
-			</p>
+				<p>
+					He is compelled to record a moment in time with its catalyst a visual sensation – an emotion that he wants to convey and make seen. Such a thing of beauty is described in Seamus Heaney&rsquo;s  Postcript :
+				</p>
 
-			<p>
-				<i>Useless to think you'll park or capture it<br>
-				More thoroughly. You are neither here nor there,<br>
-				A hurry through which known and strange things pass</i>
-			</p>
+				<p>
+					<i>Useless to think you'll park or capture it<br>
+					More thoroughly. You are neither here nor there,<br>
+					A hurry through which known and strange things pass</i>
+				</p>
 
-			<p>
-				With Heaney it is swans appearing out of nowhere, broad-siding his car in County Clare.
-				Though it can&rsquo;t be &lsquo;captured&rsquo;, emphasising the synchronicity of the moment, he nevertheless does paint a lyrical picture of the wind and light working off each other&rsquo; on the &lsquo;flaggy shore&rsquo; as the swans appear.
-				Only a poem will do.
-			</p>
+				<p>
+					With Heaney it is swans appearing out of nowhere, broad-siding his car in County Clare.
+					Though it can&rsquo;t be &lsquo;captured&rsquo;, emphasising the synchronicity of the moment, he nevertheless does paint a lyrical picture of the wind and light working off each other&rsquo; on the &lsquo;flaggy shore&rsquo; as the swans appear.
+					Only a poem will do.
+				</p>
 
-			<p>
-				What obviously moves Nathan in these urban vistas is the &lsquo;shape of the light&rsquo;, the honest, recognisable and recognisably Fordian pallor of a dusky, dripping, falling English sky, the hum of an inky blue evening in South London, a flash of orange on Brighton Esplanade, a streak of trailing traffic light scored on to a twilit Norwood High Street.
-				And there is Stan, Nathan&rsquo;s late father, his hunched gait clearly recognisable, sloping along the pavement outside West Norwood crematorium, his particular piece of the stage-set illuminated slightly with the merest touches of white on the line of the kerb.
-				Ford, like Heaney, doesn&rsquo;t shout. Only a painting will do.  A painting that is as balanced as it is subtle as it is remarkable.
-			</p>
+				<p>
+					What obviously moves Nathan in these urban vistas is the &lsquo;shape of the light&rsquo;, the honest, recognisable and recognisably Fordian pallor of a dusky, dripping, falling English sky, the hum of an inky blue evening in South London, a flash of orange on Brighton Esplanade, a streak of trailing traffic light scored on to a twilit Norwood High Street.
+					And there is Stan, Nathan&rsquo;s late father, his hunched gait clearly recognisable, sloping along the pavement outside West Norwood crematorium, his particular piece of the stage-set illuminated slightly with the merest touches of white on the line of the kerb.
+					Ford, like Heaney, doesn&rsquo;t shout. Only a painting will do.  A painting that is as balanced as it is subtle as it is remarkable.
+				</p>
 
-			<p>Aidan Quinn 2019</p>
+				<p>Aidan Quinn 2019</p>
+			</div>
 
 			<footer>
                 <a href = mailto:info@nathanford.co.uk>info@nathanford.co.uk</a>
-                &copy; Copyright Nathan Ford, <span year></span>. Website by <a href = https://greyhope.uk target = _blank>Reuben Ford</a>.
+                <span>&copy; Copyright Nathan Ford, <span year></span>.</span>
+                <span>Website by Reuben and  <a href = https://joachimford.uk target = _blank>Joachim Ford</a>.</span>
             </footer>
 		</section>
 	</body>
