--- a/essay_5.html
+++ b/essay_5.html
@@ -13,13 +13,13 @@
     <body>
         <section class = top>
             <a href = "/"><img src = assets/images/icons/title.png></a>
+            <a href = works>works</a>
+            <a href = projects>projects</a>
+            <a href = about class = this>about</a>
+            <a href = book>book</a>
+            <a class = youtube href = https://youtu.be/aJqjSGwKxBc target = _blank><img src = assets/images/icons/youtube.svg></a>
+            <img onclick = theme(this) class = theme></i>
             <img onclick = bars(this) src = assets/images/icons/bars.png>
-			<img onclick = theme(this) class = theme></i>
-            <a href = works><img src = assets/images/icons/works.png></a>
-            <a href = projects><img src = assets/images/icons/projects.png></a>
-            <a href = about class = this><img src = assets/images/icons/about.png></a>
-            <a href = book><img src = assets/images/icons/book.png></a>
-            <a href = https://youtu.be/aJqjSGwKxBc target = _blank><img src = assets/images/icons/youtube.svg></a>
         </section>
 
         <section class = main>
@@ -31,79 +31,82 @@
 				and fear which is inherent in a human situation.
 			</i> ~ Graham Greene
 
-            <p>
-				Given events in his life since his last solo exhibition two years ago,
-				the question of what preoccupies Nathan Ford in his latest body of work, for me prompts a more fundamental inquiry.  
-				Why does he paint?
-			</p>
+			<div class = essayBox>
+				<p>
+					Given events in his life since his last solo exhibition two years ago,
+					the question of what preoccupies Nathan Ford in his latest body of work, for me prompts a more fundamental inquiry.  
+					Why does he paint?
+				</p>
 
-			<p>
-				Though far from being inarticulate, 
-				Nathan seems not to fully trust his ability to describe the whys or wherefores of what he does, 
-				at times stopping in mid-explanation as if he has let himself down, swimming energetically in the wrong direction and becoming tangled in tangential verbiage.
-			</p>
+				<p>
+					Though far from being inarticulate, 
+					Nathan seems not to fully trust his ability to describe the whys or wherefores of what he does, 
+					at times stopping in mid-explanation as if he has let himself down, swimming energetically in the wrong direction and becoming tangled in tangential verbiage.
+				</p>
 
-			<p>
-				He is as an artist neither purely a <i>planner</i> or a <i>discoverer</i>. 
-				His large urban paintings have a purposeful and careful architecture, whilst the small portraits  are underlaid with idiosyncratic skeletal patterns.  
-				Paintings large and small may include random-looking marks and smudges, or meandering lines and boxes.  
-				At times preliminary measurements and calculations are pencilled along the edges or near to the face of a portrait subject.
-			</p>
+				<p>
+					He is as an artist neither purely a <i>planner</i> or a <i>discoverer</i>. 
+					His large urban paintings have a purposeful and careful architecture, whilst the small portraits  are underlaid with idiosyncratic skeletal patterns.  
+					Paintings large and small may include random-looking marks and smudges, or meandering lines and boxes.  
+					At times preliminary measurements and calculations are pencilled along the edges or near to the face of a portrait subject.
+				</p>
 
-			<p>
-				It seems when painting there is a desire to preserve a record of every visit to a canvas; the ground-work, the plan, but also the serendipity, 
-				the wondering and wandering which is sometimes neat and quick,  or occasionally lost in battle near the finish-line.  
-				Nathan&rsquo;s mother attests to his slow writing and ponderous reading, and at an early stage of his childhood he was conscious of having to develop strategies to get around this.  
-				It is not hard to see how a natural facility for drawing would be encouraged and amplified.
-			</p>
+				<p>
+					It seems when painting there is a desire to preserve a record of every visit to a canvas; the ground-work, the plan, but also the serendipity, 
+					the wondering and wandering which is sometimes neat and quick,  or occasionally lost in battle near the finish-line.  
+					Nathan&rsquo;s mother attests to his slow writing and ponderous reading, and at an early stage of his childhood he was conscious of having to develop strategies to get around this.  
+					It is not hard to see how a natural facility for drawing would be encouraged and amplified.
+				</p>
 
-			<p>
-				So there is initially a definite structure, but no fixed destination.  
-				He revels in finding threads, visual resonances, in his own way and in his own time.  
-				Though it perhaps seems like a habit of the contrarian, it may simply have germinated from a response to dyslexia, and gives him a very singular rationale. 
-				At times I think of Nathan as a painting version of the E.M. Forster character who exclaims, &lsquo;Logic!  Good gracious!  
-				What rubbish! How can I tell you what I think till I see what I say?”
-			</p>
+				<p>
+					So there is initially a definite structure, but no fixed destination.  
+					He revels in finding threads, visual resonances, in his own way and in his own time.  
+					Though it perhaps seems like a habit of the contrarian, it may simply have germinated from a response to dyslexia, and gives him a very singular rationale. 
+					At times I think of Nathan as a painting version of the E.M. Forster character who exclaims, &lsquo;Logic!  Good gracious!  
+					What rubbish! How can I tell you what I think till I see what I say?”
+				</p>
 
-			<p>
-				He has developed a flowing visual language with a pronounced, unashamed accent, reinforced by the graft and craft of years of practice.  
-				His paintings are effervescent yet finely balanced, here spare, there sharp, always suggestive rather than insistent, encouraging the viewer to seek out more, to look more intently. 
-				It is this that gives the work longevity.
-			</p>
+				<p>
+					He has developed a flowing visual language with a pronounced, unashamed accent, reinforced by the graft and craft of years of practice.  
+					His paintings are effervescent yet finely balanced, here spare, there sharp, always suggestive rather than insistent, encouraging the viewer to seek out more, to look more intently. 
+					It is this that gives the work longevity.
+				</p>
 
-			<p>
-				Painting is Nathan&rsquo;s prime mode of communication, a means for talking about his life, as well as to condense information into visual form. 
-				We see his children growing up, going out into the world, wandering through city streets, dwarfed by square urban building complexes or huge walls of graffiti.  
-				We see the children&rsquo;s bees, their hulking monsters, their ragged-toothed fish, their flying pigs, informing the more expansive streetscapes, and standing as their own discrete works in the Grey Hope series.
-			</p>
+				<p>
+					Painting is Nathan&rsquo;s prime mode of communication, a means for talking about his life, as well as to condense information into visual form. 
+					We see his children growing up, going out into the world, wandering through city streets, dwarfed by square urban building complexes or huge walls of graffiti.  
+					We see the children&rsquo;s bees, their hulking monsters, their ragged-toothed fish, their flying pigs, informing the more expansive streetscapes, and standing as their own discrete works in the Grey Hope series.
+				</p>
 
-			<p>
-				There are portraits of people he is very familiar with, among these, of course, his parents.  
-				However the fulcrum of the show is 20 paintings of similar format which were included in a recently published book, <i>How to Make a Proper Alien</i>.  
-				The book was in part prompted by the death of two friends.  However the major driver was the terminal sickness of his children&rsquo;s closest friend, Nathan&rsquo;s 10 year old nephew Thomas.  
-				It is Nathan&rsquo;s response to the inability to impart suitable or relevant words of comfort to those nearest to him. 
-				These paintings are also a way of <i>being</i>, a creative pathway out of the interstices of grief; an act of something from nothing that allows one to be made new, to move forward.
-			</p>
+				<p>
+					There are portraits of people he is very familiar with, among these, of course, his parents.  
+					However the fulcrum of the show is 20 paintings of similar format which were included in a recently published book, <i>How to Make a Proper Alien</i>.  
+					The book was in part prompted by the death of two friends.  However the major driver was the terminal sickness of his children&rsquo;s closest friend, Nathan&rsquo;s 10 year old nephew Thomas.  
+					It is Nathan&rsquo;s response to the inability to impart suitable or relevant words of comfort to those nearest to him. 
+					These paintings are also a way of <i>being</i>, a creative pathway out of the interstices of grief; an act of something from nothing that allows one to be made new, to move forward.
+				</p>
 
-			<p>
-				The sense of renewal is pertinent. By the time his exhibition at Beaux Arts begins, the artist and his family will have moved house. 
-				The 3 studio window paintings in the show are lined with coloured bottles left from the previous occupant, unearthed from the garden years ago on moving in.  
-				They have contained plants that grew in the garden, placed in the bottles as momento mori.  The objects in the window sill paintings appear to shimmer and fade, presaging change.
-			</p>
+				<p>
+					The sense of renewal is pertinent. By the time his exhibition at Beaux Arts begins, the artist and his family will have moved house. 
+					The 3 studio window paintings in the show are lined with coloured bottles left from the previous occupant, unearthed from the garden years ago on moving in.  
+					They have contained plants that grew in the garden, placed in the bottles as momento mori.  The objects in the window sill paintings appear to shimmer and fade, presaging change.
+				</p>
 
-			<p>
-				In order to say something meaningful about one&rsquo;s  life it seems necessary to shut out as much as possible any fear, doubt, or discomfiture that might ensue from the act of personal revelation that a solo show may involve.   
-				It requires confrontation, experimentation, a willingness to fail, a fair share of creative inertia, and simply keeping one&rsquo;s eyes open despite the urge to look away.  The bi-annual focus of a one man exhibition has given Nathan a rhythm to work within.  
-				He uses the cycle of time in the only way he knows; instinctively, with purpose, in a manner that will I am sure engage his many admirers, whether they know a particular work&rsquo;s inspiration or not. 
-				In spite of the seam of precious mortality that runs throughout, these are not melancholy paintings. 
-				They are touched with a mature sense of skill and awareness, a child-like ingenuity, and most importantly of all, the subtle harmony of authenticity.
-			</p>
+				<p>
+					In order to say something meaningful about one&rsquo;s  life it seems necessary to shut out as much as possible any fear, doubt, or discomfiture that might ensue from the act of personal revelation that a solo show may involve.   
+					It requires confrontation, experimentation, a willingness to fail, a fair share of creative inertia, and simply keeping one&rsquo;s eyes open despite the urge to look away.  The bi-annual focus of a one man exhibition has given Nathan a rhythm to work within.  
+					He uses the cycle of time in the only way he knows; instinctively, with purpose, in a manner that will I am sure engage his many admirers, whether they know a particular work&rsquo;s inspiration or not. 
+					In spite of the seam of precious mortality that runs throughout, these are not melancholy paintings. 
+					They are touched with a mature sense of skill and awareness, a child-like ingenuity, and most importantly of all, the subtle harmony of authenticity.
+				</p>
 
-			<p>Aidan Quinn 2017</p>
-			
+				<p>Aidan Quinn 2017</p>
+			</div>
+				
 			<footer>
                 <a href = mailto:info@nathanford.co.uk>info@nathanford.co.uk</a>
-                &copy; Copyright Nathan Ford, <span year></span>. Website by <a href = https://greyhope.uk target = _blank>Reuben Ford</a>.
+                <span>&copy; Copyright Nathan Ford, <span year></span>.</span>
+                <span>Website by Reuben and  <a href = https://joachimford.uk target = _blank>Joachim Ford</a>.</span>
             </footer>
 		</section>
 	</body>
